--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,6 +22,16 @@
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="primary_material_green">#46b164</color>
+    <color name="primary_dark_material_green">#009d25</color>
+    <color name="primary_text_material_light">#ded7d6fb</color>
+    <color name="text_color_secondary_white">#89f6faf9</color>
+    <color name="primary_material_white">#f2f9f4</color>
+    <color name="accent_material_pink">#bd8dc5</color>
+    <color name="secondary_text_material_black">#f1121314</color>
+    <color name="primary_material_grayish">#4ab35c</color>
+    <color name="card_view_color">#649352</color>
     <color name="text_color">#616161</color>
+
 
 </resources>
